@@ -31,7 +31,7 @@ import string
 # classes
 ########################################################################
 
-class SubstitutionField(qm.fields.TextField):
+class SubstitutionField(qm.fields.TupleField):
     """A rule for performing a text substitution.
 
     A 'SubstitutionField' consists of a regular expression pattern and a
@@ -44,108 +44,17 @@ class SubstitutionField(qm.fields.TextField):
 
     class_name = "qm.test.classes.file.SubstitutionField"
 
-    # The pattern and replacement string are encoded together into a
-    # single string, separated by a semicolon.  Semicolons that occur
-    # within the pattern and replacement string are escaped with a
-    # backslash.
-    #
-    # Use 'SplitValue' to extract the pattern and replacement string
-    # from a value of this field.
-
-
     def __init__(self, name, **properties):
         """Create a new 'SubstitutionField'.
 
         By default, the pattern and replacement string are empty."""
 
         # Initialize the base class.
-        qm.fields.TextField.__init__(self, name, ";", **properties)
-
-
-    def SplitValue(self, value):
-        """Split a value of this field into the pattern and replacement string.
-
-        'value' -- A value for this field.
-
-        returns -- A pair '(pattern, replacement_string)'."""
-
-        # Be lenient about an empty string.
-        if value == "":
-            return ("", "")
-        # Break it in half.
-        elements = string.split(value, ";", 1)
-        # Unescape semicolons in both halves.
-        elements = map(lambda e: string.replace(e, r"\;", ";"), elements) 
-        return elements
-
-
-    def FormatValueAsHtml(self, value, style, name=None):
-        pattern, replacement = self.SplitValue(value)
-        # Since we're generating HTML, escape special characters.
-        pattern = qm.web.escape(pattern)
-        replacement = qm.web.escape(replacement)
-
-        if style in ["new", "edit"]:
-            result = '''
-            <input type="hidden"
-                   name="%(name)s"
-                   value="%(value)s"/>
-            <table border="0" cellpadding="0" cellspacing="4">
-             <tr>
-              <td>Pattern:</td>
-              <td>&nbsp;</td>
-              <td><input type="text"
-                         size="40"
-                         name="pattern"
-                         onchange="update_substitution();"
-                         value="%(pattern)s"/></td>
-             </tr>
-             <tr>
-              <td>Replacement:</td>
-              <td>&nbsp;</td>
-              <td><input type="text"
-                         size="40"
-                         name="substitution"
-                         onchange="update_substitution();"
-                         value="%(replacement)s"/></td>
-             </tr>
-            </table>
-            <script language="JavaScript">
-            function update_substitution()
-            {
-              var pattern = document.form.pattern.value;
-              pattern = pattern.replace(/;/g, "\\;");
-              var substitution = document.form.substitution.value;
-              substitution = substitution.replace(/;/g, "\\;");
-              document.form.%(name)s.value = pattern + ";" + substitution;
-            }
-            </script>
-            ''' % locals()
-            return result
-
-        elif style == "full":
-            return '''
-            <table border="0" cellpadding="2" cellspacing="0">
-             <tr valign="top">
-              <td>Pattern:</td>
-              <td><tt>%s</tt></td>
-             </tr>
-             <tr valign="top">
-              <td>Replacement:</td>
-              <td><tt>%s</tt></td>
-             </tr>
-            </table>
-            ''' % (pattern, replacement)
-
-        else:
-            # For all other styles, use the base class implementation.
-            return qm.fields.TextField.FormatValueAsHtml(
-                self, value, style, name)
-
-
-    def FormatValueAsText(self, value, columns=72):
-        # Don't line-wrap or otherwise futz with the value.
-        return value
+        fields = (qm.fields.TextField(name = "pattern",
+                                      title = "Pattern",),
+                  qm.fields.TextField(name = "replacement",
+                                      title = "Replacement"))
+        qm.fields.TupleField.__init__(self, name, fields, **properties)
 
 
     def GetHelp(self):
@@ -157,9 +66,7 @@ class SubstitutionField(qm.fields.TextField):
         matched groups in the pattern.
 
         The regular expression and substitution syntax are those of
-        Python's standard "'re' regular expression module"
-
-.. "'re' regular expression module" http://www.python.org/doc/1.5.2p2/lib/module-re.html ."""
+        Python's standard "'re' regular expression module"."""
 
 
 
@@ -215,21 +122,9 @@ class FileContentsTest(Test):
 
     def Run(self, context, result):
         # Extract the path to the file we're testing.
-        try:
-            path = context[self.path_property]
-        except KeyError:
-            # The path is not present in the context under the expected
-            # property name.
-            result.Fail("Missing property '%s' in context." %
-                        self.path_property)
+        path = context[self.path_property]
         # Read the contents of the file.
-        try:
-            contents = open(path, "r").read()
-        except IOError, exception:
-            # Couldn't read the file.
-            result.Fail(cause="Could not open file '%s'." % path,
-                        annotations={ "FileContentsTest.error"
-                                      : str(exception) })
+        contents = open(path, "r").read()
         # Perform substitutions on the file contents.
         self.expected_contents = \
           self.__PerformSubstitutions(self.expected_contents)
@@ -248,9 +143,7 @@ class FileContentsTest(Test):
         returns -- The string 'text', processed with the substitutions
         configured for this test instance."""
 
-        substitutions_field = self.arguments[2].GetContainedField()
-        for substitution in self.substitutions:
-            pattern, replacement = substitutions_field.SplitValue(substitution)
+        for pattern, replacement in self.substitutions:
             text = re.sub(pattern, replacement, text)
         return text
 
